Fix overflow in codemirror input

--- a/less/app.less
+++ b/less/app.less
@@ -226,10 +226,7 @@ pre, code { padding: 0; margin: 0; font-family:  Menlo !important; }
   }
 
   .input {
-    max-height: 420px;
-    overflow-y: auto;
     border: 1px solid #44C7F4;
-    padding: 10px;
     margin-bottom: 2px;
     border-radius: 3px;
     background: @jwtExplainedBackgroundColor;
@@ -252,6 +249,12 @@ pre, code { padding: 0; margin: 0; font-family:  Menlo !important; }
       width: 100%;
       height: auto;
       background: none;
+      overflow-y: auto;
+      max-height: 420px;
+
+      .CodeMirror-vscrollbar {
+        overflow: hidden;
+      }
     }
   }
 
